# MyGPT

./: .gitignore  README.md  config.8layer_2_4b.yaml  config.8layer_untied_2_4b.yaml  config.continue_800m.yaml  config.yaml  gradio_app.py  pyproject.toml  requirements.txt  streamlit_app.py  train.sh
docs/: data_preparation.md  dataset_candidates.md  dataset_candidates_ko.html  model_architecture_improvements_ko.html  pretrain_dataset_code_ko.html  project_direction.md
scripts/: build_v3_pretrain_from_v2_plus_aihub.py  prepare_pretrain_colab.sh  sample_pretrain_dataset.py
src/: __init__.py  config.py  data.py  inference.py  model.py  train.py
src/dataset_pipeline/: __init__.py  adapters.py  builder.py  prepare_pretrain.py  schema.py
src/model/: __init__.py  attention.py  decoder.py  layer.py  model.py  normalize.py  positional_encoding.py
tests/: test_data.py  test_dataset_pipeline.py  test_inference.py  test_model.py  test_train.py
