[project]
name = "mygpt"
version = "0.1.0"
description = "A small decoder-only language model training project for Korean instruction data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.8",
    "datasets>=3.0",
    "huggingface_hub>=0.30",
    "ijson>=3.3",
    "mwparserfromhell>=0.6",
    "pyarrow>=16.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.45",
    "wandb>=0.18",
]
